Changed layout and index html files

--- a/BusinessManagement/templates/index.html
+++ b/BusinessManagement/templates/index.html
@@ -7,9 +7,10 @@
     simple dashboard.
   </div>
   <div class="lead">
-    Brought to you by Kshitij (ka598) from section IS601-007 {# TODO replace my
-    name with your first name #} {# TODO replace my ucid with your ucid #} {#
-    TODO replace both with your section (i.e., 005, 007, etc) #}
+    {# Changed name and UCID - Kshitij Aji, ka598, Nov 19,2022 #} Brought to you
+    by Kshitij (ka598) from section IS601-007 {# TODO replace my name with your
+    first name #} {# TODO replace my ucid with your ucid #} {# TODO replace both
+    with your section (i.e., 005, 007, etc) #}
   </div>
 </div>
 {% endblock %}
