--- a/BusinessManagement/templates/layout.html
+++ b/BusinessManagement/templates/layout.html
@@ -32,7 +32,8 @@
     <div id="header">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          {# TODO replace my ucid mt85 with your ucid #}
+          {# TODO replace my ucid mt85 with your ucid #} {# Changed UCID -
+          Kshitij Aji, ka598, Nov 19,2022 #}
           <a class="navbar-brand" href="{{url_for('home.index')}}"
             >DIAR-ka598</a
           >
