--- a/BusinessManagement/templates/add_employee.html
+++ b/BusinessManagement/templates/add_employee.html
@@ -1,20 +1,30 @@
-{% extends "layout.html" %}
-{% block title %}Add Employee{% endblock %}
-{% block content %}
+{% extends "layout.html" %} {% block title %}Add Employee{% endblock %} {% block
+content %}
 <div class="container-fluid">
-    <div class="h1">Add Employee</div>
-    <div>
-        <form method="POST">
-            {#
-            generate fields with proper types for
-            first_name
-            last_name
-            email
-            #}
-            {# use the below for company selection #}
-            {% include "company_dropdown.html" %}
-            <input type="submit" class="btn btn-primary" value="Save Employee" />
-        </form>
-    </div>
+  <div class="h1">Add Employee</div>
+  <div>
+    <form method="POST">
+      {# generate fields with proper types for first_name last_name email #} {#
+      Generated fields for first_name, last_name, email - Kshitij Aji, ka598,
+      Nov 29, 2022#}
+
+      <div class="form-group mb-3">
+        <label class="form-label" for="fn">First Name</label>
+        <input class="form-control" id="fn" name="fname" />
+      </div>
+      <div class="form-group mb-3">
+        <label class="form-label" for="ln">Last Name</label>
+        <input class="form-control" id="ln" name="lname" />
+      </div>
+      <div class="form-group mb-3">
+        <label class="form-label" for="email">Email ID</label>
+        <input class="form-control" id="email" name="email" />
+      </div>
+
+      {#use the below for company selection #} {% include
+      "company_dropdown.html"%}
+      <input type="submit" class="btn btn-primary" value="Save Employee" />
+    </form>
+  </div>
 </div>
 {% endblock %}
