Added roles to Flask Sample

--- a/flask_sample/auth/templates/landing_page.html
+++ b/flask_sample/auth/templates/landing_page.html
@@ -2,6 +2,6 @@
 content %}
 <div class="container-fluid">
   <div class="h3">Welcome</div>
-  {{current_user.email}}
+  {{current_user.username}}
 </div>
 {% endblock %}
