--- a/flask_sample/templates/_formhelpers.html
+++ b/flask_sample/templates/_formhelpers.html
@@ -1,6 +1,14 @@
 {% macro render_field(field) %} {# demonstrating a macro (basically a template
 function) modified from
-https://flask.palletsprojects.com/en/2.2.x/patterns/wtforms/ #}
+https://flask.palletsprojects.com/en/2.2.x/patterns/wtforms/ hints:
+https://gist.github.com/pwalsh/d3eb06ad098abcc9cb1d #} {% if field.type ==
+"BooleanField" %}
+<!-- handle checkbox/boolean field-->
+<div class="form-check">
+  {{field(class="form-check-input")}} {{ field.label(class="form-check-label")}}
+</div>
+{% else %}
+<!-- handle other fields (todo implement other non-standard fields)-->
 <div class="form-group mb-3">
   {{ field.label(class="form-label") }} {{
   field(class="form-control",**kwargs)|safe }} {% if field.errors %}
@@ -11,4 +19,4 @@ https://flask.palletsprojects.com/en/2.2.x/patterns/wtforms/ #}
   </ul>
   {% endif %}
 </div>
-{% endmacro %}
+{% endif %} {% endmacro %}
