--- a/flask_sample/auth/templates/register.html
+++ b/flask_sample/auth/templates/register.html
@@ -3,9 +3,9 @@ content %} {% from "_formhelpers.html" import render_field %}
 <div class="container-fluid">
   <div class="h3">Register</div>
   <form method="POST">
-    {{ form.hidden_tag() }} {{render_field(form.email)}}
-    {{render_field(form.password)}} {{render_field(form.confirm)}}
-    {{form.submit(class="btn btn-primary")}}
+    {{ form.hidden_tag() }} {{render_field(form.username)}}
+    {{render_field(form.email)}} {{render_field(form.password)}}
+    {{render_field(form.confirm)}} {{form.submit(class="btn btn-primary")}}
   </form>
 </div>
 {% endblock %}
