--- a/BusinessManagement/templates/add_employee.html
+++ b/BusinessManagement/templates/add_employee.html
@@ -9,16 +9,34 @@ content %}
       Nov 29, 2022#}
 
       <div class="form-group mb-3">
-        <label class="form-label" for="fn">First Name</label>
-        <input class="form-control" id="fn" name="fname" />
+        <label class="form-label" for="first name">First Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="first name"
+          placeholder="Enter First Name"
+          name="first_name"
+        />
       </div>
       <div class="form-group mb-3">
-        <label class="form-label" for="ln">Last Name</label>
-        <input class="form-control" id="ln" name="lname" />
+        <label class="form-label" for="last name">Last Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="last name"
+          placeholder="Enter Last Name"
+          name="last_name"
+        />
       </div>
       <div class="form-group mb-3">
         <label class="form-label" for="email">Email ID</label>
-        <input class="form-control" id="email" name="email" />
+        <input
+          type="text"
+          class="form-control"
+          id="email"
+          placeholder="Enter Email ID"
+          name="email"
+        />
       </div>
 
       {#use the below for company selection #} {% include
