Made changes to edit_company.html

--- a/BusinessManagement/templates/edit_company.html
+++ b/BusinessManagement/templates/edit_company.html
@@ -7,6 +7,67 @@ content %}
       {# generate fields with proper types for name address city website and
       prefill the fields with loaded company data #} {# use this for
       country/state selection #} {% include "country_state_selector.html" %}
+
+      <div class="form-group mb-3">
+        <label class="form-label" for="name">Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          placeholder="Enter Company Name"
+          name="name"
+          value="{{row.name}}"
+        />
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label" for="address">Address</label>
+        <input
+          type="text"
+          class="form-control"
+          id="address"
+          placeholder="Enter Company Address"
+          name="address"
+          value="{{row.address}}"
+        />
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label" for="city">City</label>
+        <input
+          type="text"
+          class="form-control"
+          id="city"
+          placeholder="Enter company city location"
+          name="city"
+          value="{{row.city}}"
+        />
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label" for="website"> Website </label>
+        <input
+          type="text"
+          class="form-control"
+          id="website"
+          placeholder="Enter Company URL "
+          name="website"
+          value="{{row.website}}"
+        />
+      </div>
+
+      <div class="form-group mb-3">
+        <label class="form-label" for="zip"> Zip Code </label>
+        <input
+          type="text"
+          class="form-control"
+          id="zip"
+          placeholder="Enter Zip Code"
+          name="zip"
+          value="{{row.zip}}"
+        />
+      </div>
+
       <input type="submit" class="btn btn-primary" value="Save Company" />
     </form>
   </div>
