--- a/flask_sample/templates/layout.html
+++ b/flask_sample/templates/layout.html
@@ -28,7 +28,7 @@
         line-height: 60px;
       }
     </style>
-    <title>{% block title %}{% endblock %} - Sample</title>
+    <title>{% block title %}{% endblock %} - Flask Web Application</title>
     {% endblock %}
   </head>
 
