Changes to nav.html

--- a/flask_sample/templates/nav.html
+++ b/flask_sample/templates/nav.html
@@ -1,7 +1,7 @@
 {% from "_dropdown_nav.html" import dropdown_nav %}
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Sample</a>
+    <a class="navbar-brand" href="#"> Flask Web Application</a>
     <button
       class="navbar-toggler"
       type="button"
