--- a/IS601ShopProject/shop/templates/item.html
+++ b/IS601ShopProject/shop/templates/item.html
@@ -1,17 +1,12 @@
-{% extends "layout.html" %}
-{% block title %}{{type}} Item{% endblock %}
-{% block content %}
-{% from "_formhelpers.html" import render_field %}
+{% extends "layout.html" %} {% block title %}{{type}}Product{% endblock %} {%
+block content %} {% from "_formhelpers.html" import render_field %}
 <div class="container-fluid">
-    <div class="h3">{{type}} Item</div>
-    <form method="POST">
-        {{ form.hidden_tag() }}
-        {{render_field(form.name)}}
-        {{render_field(form.description)}}
-        {{render_field(form.stock)}}
-        {{render_field(form.cost)}}
-        {{render_field(form.image)}}
-        {{form.submit(class="btn btn-primary")}}
-    </form>
+  <div class="h3">{{type}} Product</div>
+  <form method="POST">
+    {{ form.hidden_tag() }} {{render_field(form.name)}}
+    {{render_field(form.description)}} {{render_field(form.stock)}}
+    {{render_field(form.cost)}} {{render_field(form.image)}}
+    {{form.submit(class="btn btn-primary")}}
+  </form>
 </div>
 {% endblock %}
