--- a/IS601ShopProject/shop/templates/items.html
+++ b/IS601ShopProject/shop/templates/items.html
@@ -1,11 +1,7 @@
-{% extends "layout.html" %}
-{% block title %}Items{% endblock %}
+{% extends "layout.html" %} {% block title %}Products{% endblock %}
 
 <!-- content -->
-{% block content %}
-{% from "_table_helper.html" import render_table %}
-{% set view = "shop.item" %}
-{% set edit = "shop.item" %}
-{% set delete = "shop.delete" %}
-{{render_table("Items", rows, ["user_id"], view, edit, delete)}}
-{% endblock %}
+{% block content %} {% from "_table_helper.html" import render_table %} {% set
+view = "shop.item" %} {% set edit = "shop.item" %} {% set delete = "shop.delete"
+%} {{render_table("Products", rows, ["user_id"], view, edit, delete)}} {%
+endblock %}
