--- a/IS601ShopProject/auth/templates/home_page.html
+++ b/IS601ShopProject/auth/templates/home_page.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %} {% block title %} Home Page{% endblock %} {% block
-content %}
+content %} {# Added Home Page for the shop project - Kshitij Aji, ka598, Dec 14
+2022#}
 <div class="container-fluid">
   <div class="h3">
     Welcome to the Online Shop! <br />
