Created Payment Information Form

--- a/IS601ShopProject/templates/nav.html
+++ b/IS601ShopProject/templates/nav.html
@@ -15,6 +15,11 @@
           <a class="nav-link" href="{{url_for('auth.landing_page')}}">Home</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('auth.payment')}}"
+            >Payment Details</a
+          >
+        </li>
         {#
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('game.play')}}">Play</a>
