--- a/IS601ShopProject/shop/templates/cart.html
+++ b/IS601ShopProject/shop/templates/cart.html
@@ -61,7 +61,7 @@
           checkout process, my example skips that since I don't record
           address/payment details #}
           <a href="{{url_for('shop.purchase')}}" class="btn btn-primary"
-            >Checkout</a
+            >Proceed To Orders</a
           >
         </td>
       </tr>
