--- a/IS601ShopProject/shop/templates/order_summary.html
+++ b/IS601ShopProject/shop/templates/order_summary.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="h4">Order Confirmation</div>
   <div class="h5">
-    Thank you for your purchase! We hope you visit the Online Shop again!
+    {#Thank you for your purchase! We hope you visit the Online Shop again!#}
   </div>
   <table class="table text-light bg-dark">
     <thead>
